updated service layer